k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
      - name: api-python
        image: localhost:32000/api-python
        ports:
        - containerPort: 8000
