k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-python
spec:
  selector:
    app: api-python
  ports:
  - protocol: TCP
    port: 80          # Porta que o service entrega internamente
    targetPort: 8000  # Porta do container
  type: ClusterIP
