k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: api.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-python
            port:
              number: 80
